--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "flutter build web --release"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,9 @@
   "bugs": {
     "url": "https://github.com/vitolog76-hub/smartcharge_app/issues"
   },
-<<<<<<< HEAD
-  "homepage": "https://github.com/vitolog76-hub/smartcharge_app#readme"
-=======
   "homepage": "https://github.com/vitolog76-hub/smartcharge_app#readme",
   "dependencies": {
     "dotenv": "^17.2.3"
   }
->>>>>>> c44e1c6 (Sblocco definitivo: rimosso APK e attivato ponte API)
+}
 }
