Cleanup totale package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
+cat <<EOF > package.json
 {
   "name": "smartcharge_app",
   "version": "1.0.0",
   "description": "A new Flutter project.",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "flutter build web --release"
@@ -15,16 +12,10 @@
     "type": "git",
     "url": "git+https://github.com/vitolog76-hub/smartcharge_app.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/vitolog76-hub/smartcharge_app/issues"
-  },
-  "homepage": "https://github.com/vitolog76-hub/smartcharge_app#readme",
   "dependencies": {
     "dotenv": "^17.2.3"
   }
 }
-}
+EOF
