--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,57 +1,23 @@
-<<<<<<< HEAD
 name: smartcharge_app
-=======
-name: smartcharge_pro
->>>>>>> c44e1c6 (Sblocco definitivo: rimosso APK e attivato ponte API)
-description: "Simulatore e monitoraggio ricarica veicoli elettrici."
+description: A new Flutter project.
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.10.1
-  cloud_firestore: ^5.6.2
-  shared_preferences: ^2.5.4
-  uuid: ^4.5.1
-<<<<<<< HEAD
-=======
-  http: ^1.6.0
->>>>>>> c44e1c6 (Sblocco definitivo: rimosso APK e attivato ponte API)
-  
-
-  # Libreria per la gestione delle date e formattazione oraria
-  intl: ^0.19.0
-  
-  # Libreria per i grafici (BarChart e LineChart)
-  fl_chart: ^0.70.0
-  
-
-  # Icone aggiuntive stile iOS (opzionale ma consigliato)
-  cupertino_icons: ^1.0.8
-<<<<<<< HEAD
-=======
-  flutter_dotenv: ^6.0.0
->>>>>>> c44e1c6 (Sblocco definitivo: rimosso APK e attivato ponte API)
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  intl: ^0.18.1
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/cars.json
-<<<<<<< HEAD
-=======
-   # - .env
->>>>>>> c44e1c6 (Sblocco definitivo: rimosso APK e attivato ponte API)
-  # Se in futuro vorrai aggiungere icone personalizzate o immagini, 
-  # dovrai decommentare le righe qui sotto:
-  # assets:
-  #   - assets/images/
