--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "smartcharge_app",
   "version": "1.0.0",
   "scripts": {
-    "build": "if [ ! -d \"$HOME/flutter\" ]; then git clone https://github.com/flutter/flutter.git --depth 1 -b stable $HOME/flutter; fi && export PATH=\"$HOME/flutter/bin:$PATH\" && flutter config --enable-web && flutter pub get && flutter build web --release --no-tree-shake-icons"
-  }
+    "build": "export PATH=\"$HOME/flutter/bin:$PATH\" && flutter pub get && flutter build web --release --no-tree-shake-icons"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
