--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,16 +6,16 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
-dependencies:
+ddependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.14.0
-  firebase_auth: ^4.16.0         # AGGIUNGI QUESTA
-  shared_preferences: ^2.2.2      # AGGIUNGI QUESTA
-  uuid: ^4.2.1                   # AGGIUNGI QUESTA
-  intl: ^0.18.1
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
+  shared_preferences: ^2.2.0
+  intl: ^0.19.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
