--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.19.0
   fl_chart: ^0.70.0
+  pdf: ^3.10.8
+  printing: ^5.11.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
