Fix: risolto bottom overflow e aggiunto modello auto nel salvataggio log

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+# macOS
+.DS_Store
+*/.DS_Store
+
+# Flutter/Dart
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
 .packages
-build/
-test/*.apk
 .pub-cache/
+.pub/
+build/
+
+# Android/iOS specifici
+test/*.apk
+*.uploaded
