Refresh della cache di git per applicare il gitignore

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,7 @@
 <true/>
 <key>LSSupportsOpeningDocumentsInPlace</key>
 <true/>
+<key>UISupportsDocumentBrowser</key>
+    <true/>
 </dict>
 </plist>
