Fix: Configurazione Firebase e attivazione Login Anonimo funzionante

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   pdf: ^3.10.8
   printing: ^5.11.0
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.7.0
 
 dev_dependencies:
   flutter_test:
